--- a/templates/crawler.html
+++ b/templates/crawler.html
@@ -49,13 +49,10 @@
                             <option value="XRPUSDT">XRP/USDT</option>
                             <option value="ADAUSDT">ADA/USDT</option>
                             <option value="BNBUSDT">BNB/USDT</option>
-                            <option value="1000SATSUSDT">1000SATS/USDT</option>
-                            <option value="SAGAUSDT">SAGA/USDT</option>
                             <option value="OMNIUSDT">OMNI/USDT</option>
                             <option value="SOLUSDT">SOL/USDT</option>
-                            <option value="PEPEUSDT">PEPE/USDT</option>
                             <option value="DOGEUSDT">DOGE/USDT</option>
-                            <!-- 添加其他交易對的選項 -->
+                            
                         </select>
                     </div><br>
                     <div>
@@ -88,7 +85,7 @@
 
                 <h3>查詢所有提醒紀錄</h3><br>
                 <form action="/crawler" method="POST">信箱
-                    <input type="text" name="search_noti" placeholder="輸入信箱搜尋所有提醒" required><br>
+                    <input type="text" name="search_noti" placeholder="xxx123@gmail.com" required><br>
                     <button type="submit">搜尋提醒</button>
                 </form>
             </div>
