--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
     <h3>會員註冊</h3>
     <div>歡迎光臨</div>
     <form id="signupForm" action="/signup" method='POST'>
-        信箱 <input type='text' name='email' /><br>
+        帳號 <input type='text' name='email' /><br>
         密碼 <input type='password' name='password' />
         <button type="submit">註冊</button>
     </form>
